# silky

./: CMakeLists.txt  README.md
common/: argparse.hpp  array_wrapper.h  auto_register.hpp  define.hpp  no_copyable.hpp  object_pool.h  random_util.hpp  scope_guard.h  shrong_string.hpp  timer.hpp  type.hpp
test/: argparse_test.cpp  array_wrapper_test.cpp  auto_register_test.cpp  define_test.cpp  object_pool_test.cpp  scope_guard_test.cpp  shrong_string_test.cpp  strong_string_test.cpp  test_base.hpp  timer_test.cpp
